package doc;

public class Category {
}
