package doc;

import java.util.Scanner;

public class DbIO {
    Scanner scanner;
}
