package doc;

public interface Media {
    String getTitle();
    int getReleaseYear();
    float getRating();
    String getGenre();
    int getTimeWatched();

   void Media(String title, int releaseYear, float rating, String genre, boolean MediaType);
}
