package doc;

public class MediaWindow {
}
