package doc;

public abstract class Movies implements Media {
    private String title;
    private int releaseYear;
    private float rating;
    private String genre;
}
