package doc;

import java.util.ArrayList;

public class StreamingService {
    CreateAccount newAccount;
    Category newCategory;
    Watchlist list;
    DbIO io;
    TextUI ui;
    static ArrayList<User> users;
}
