package doc;

import java.util.Scanner;

public class TextUI {
    Scanner scanner;
}
