package doc;

public abstract class TvShows implements Media {
    private String title;
    private int releaseYear;
    private float rating;
    private String genre;
    private int seasons;
    private int episodes;

}
