package doc;

import java.util.ArrayList;

public class User {
    private String username;
    private String password;
    static ArrayList<User> users;


    public User(String username, String password){}
}
